projects/vb6parse/snapshots/syntax/statements/declarations/erase/erase_with_parentheses.snap
---
source: projects/vb6parse/src/syntax/statements/declarations/erase.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: EraseStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: EraseKeyword
                  text: Erase
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: myArray
                - kind: LeftParenthesis
                  text: (
                - kind: RightParenthesis
                  text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
